--- a/.env.local.example
+++ b/.env.local.example
@@ -2,6 +2,6 @@ DOTNET_SERVER_URL='http://localhost:5000'
 NEXT_PUBLIC_SITE_URL='http://localhost:3000'
 
 NEXT_PUBLIC_AUTH0_BASE_URL='http://localhost:3000'
-NEXT_PUBLIC_AUTH0_ISSUER_BASE_URL=
-NEXT_PUBLIC_AUTH0_CLIENT_ID=
-NEXT_PUBLIC_AUTH0_CLIENT_SECRET=
+NEXT_PUBLIC_AUTH0_ISSUER_BASE_URL=''
+NEXT_PUBLIC_AUTH0_CLIENT_ID=''
+NEXT_PUBLIC_AUTH0_CLIENT_SECRET=''
